@@ -1052,7 +1052,6 @@ end_insertion (int type)
       line_number--;
       break;
 
-    case documentdescription:
     case ifclear:
     case ifdocbook:
     case ifinfo:
@@ -1104,6 +1103,12 @@ end_insertion (int type)
       close_insertion_paragraph ();
       break;
 
+    case documentdescription:
+      if (xml)
+        insert_string (document_description);
+        xml_insert_element (DOCUMENTDESCRIPTION, END);
+      break;
+      
     case menu:
       in_menu--;                /* No longer hacking menus. */
       if (html && !no_headers)
@@ -1548,8 +1553,15 @@ cm_direntry (void)
 void
 cm_documentdescription (void)
 {
-  if (html || xml)
+  if (html)
     begin_insertion (documentdescription);
+
+  else if (xml)
+    {
+      xml_insert_element (DOCUMENTDESCRIPTION, START);
+      begin_insertion (documentdescription);
+    }
+
   else
     command_name_condition ();
 }
