@@ -324,7 +324,7 @@ extern void free_and_clear (char **pointer),
   add_char (int character),
   add_meta_char (int character),
   close_single_paragraph (void),
-  insert_string (char *string),
+  insert_string (const char *),
   insert (int character),
   get_rest_of_line (int expand, char **string),
   add_html_block_elt (char *string),
